Changes in QMPlay2 build 17.02.23:
	- replace Http class by NetworkAccess and use it in more places,
	- add XSPF support (thanks Zamarin Arthur for help),
	- merge ProstoPleer and SoundCloud in MusicBrowser,
	- add SoundCloud support (Zamarin Arthur),
	- switch to C++11,
	- minor bugfix,

Changes in QMPlay2 build 17.02.12:
	- fix updating covers (also title, artist and album outside QMPlay2) in network streams,
	- add "Skip" and "Stop after" flags for playlist (Zamarin Arthur),
	- add "Lock" flag for playlist entry - don't allow to remove it,
	- equalizer improvements (presets must be set again),
	- display cover arts in Freedesktop notifications,
	- scale VU meters in Simple Visualization,
	- minor improvements and bug fixes,
	- add quick group synchronization,
	- add Profiles (Zamarin Arthur),
	- displaying still images,
	- add full macOS support,

Changes in QMPlay2 build 16.12.23:
	- new Notifications module (Zamarin Arthur),
	- use cookies obtained from "youtube-dl",
	- add Bauer stereophonic-to-binaural DSP,
	- updated German translation (martinkg),
	- add audio dynamic range compressor,
	- bugfix,

Changes in QMPlay2 build 16.11.20:
	- display real FPS and interlaced video information on Information panel,
	- VA-API displays using OpenGL (default behavior),
	- updated German translation (martinkg),
	- add DXVA2 decoder (limited features),
	- fix seeking on interlaced videos,
	- CUVID bugfix,

Changes in QMPlay2 build 16.11.01:
	- properly read styles from MPL, MicroDVD and SubRip format,
	- add CUVID decoder,
	- bugfix,

Changes in QMPlay2 build 16.10.14:
	- fix issue (deadlock/crash) if playback has been stopped when FFmpeg resolves a hostname,
	- PortAudio fixes (especially for Windows),
	- better finding subtitles files for video,
	- bugfix,

Changes in QMPlay2 build 16.09.24:
	- use namespace on libmodplug - don't mix system and QMPlay2 modplug,
	- fix screen saver inhibition regression,

Changes in QMPlay2 build 16.09.21: